--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@azure/cognitiveservices-face": "^5.0.0",
+    "@azure/ms-rest-js": "^2.6.1",
     "expo": "~44.0.0",
+    "expo-camera": "^12.1.2",
+    "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
+    "install": "^0.13.0",
+    "npm": "^8.8.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-ble-manager": "^8.0.2",
     "react-native-dialog-input": "^1.0.8",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "^2.4.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^2.7.0",
@@ -23,8 +31,7 @@
     "react-native-screens": "^3.13.1",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
-    "expo-image-picker": "~12.0.1"
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
