Adds checkbox & camera

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-ble-manager": "^8.0.2",
+    "react-native-bouncy-checkbox": "^2.1.10",
     "react-native-dialog-input": "^1.0.8",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "^2.4.0",
